# particle-automata

./: LICENSE  README.md  main.py  pyproject.toml
particle_automata/: game.py  matrix.py  particle.py  settings.py
tests/: test_matrix.py  test_particle.py
